--- a/index.html
+++ b/index.html
@@ -7,31 +7,16 @@ layout: landing
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
 							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
+								<li><a href="#rsvp" class="button special">RSVP</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#about" class="more scrolly">About The Couple</a>
 					</section>
 
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-female major style1"><span class="label">Ayako</span></span></li>
-								<li><span class="icon fa-heart-o major style4"><span class="label">Wedding</span></span></li>
-								<li><span class="icon fa-male major style3"><span class="label">Terrell</span></span></li>
-							</ul>
-						</div>
-					</section>
+				
 
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
+				<!-- About -->
+					<section id="about" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Magna primis lobortis<br />
@@ -54,7 +39,20 @@ layout: landing
 							</div>
 						</section>
 					</section>
-
+				<!-- RSVP -->
+					<section id="rsvp" class="wrapper style1 special">
+						<div class="inner">
+							<header class="major">
+								<h2>RSVP</h2>
+								<p> some rsvp form should go here </p> 
+							</header>
+							<ul class="icons major">
+								<li><span class="icon fa-female major style1"><span class="label">Ayako</span></span></li>
+								<li><span class="icon fa-heart-o major style4"><span class="label">Wedding</span></span></li>
+								<li><span class="icon fa-male major style3"><span class="label">Terrell</span></span></li>
+							</ul>
+						</div>
+					</section>
 				<!-- Three -->
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
@@ -88,20 +86,6 @@ layout: landing
 									<h3>Tortor Ut</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
-							</header>
-							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
